# one_piece_windrose_server

./: .gitattributes  DedicatedServer.md  LICENSE  Manifest_DebugFiles_Win64.txt  Manifest_NonUFSFiles_Win64.txt  README.md  SaveWorkflow.md  StartServerForeground.bat  StartWindrosePlusServer.bat  release_notes.md  windrose_plus.json
R5/: ServerDescription.json
R5/.sentry-native/: metadata
R5/.sentry-native/057130fc-c5f0-48f9-b634-45c74035ef35.run/: __sentry-breadcrumb1  __sentry-breadcrumb2  __sentry-event  session.json
R5/.sentry-native/0a3e7eff-6be9-4e49-33c4-5d37e050b71b.run/: __sentry-breadcrumb1  __sentry-breadcrumb2  __sentry-event  session.json
R5/.sentry-native/0d7279fd-c8df-43da-6279-c74d04f2758b.run/: __sentry-breadcrumb1  __sentry-breadcrumb2  (+2 more)
config/: windrose_plus.entities.default.ini  windrose_plus.food.default.ini  windrose_plus.gear.default.ini  windrose_plus.harvest.default.ini  windrose_plus.weapons.default.ini
cpp-mods/: CMakeLists.txt  README.md
cpp-mods/HeightmapExporter/: CMakeLists.txt
cpp-mods/MapMaterializerExporter/: CMakeLists.txt  dllmain.cpp
docs/: commands.md  config-reference.md  scripting-guide.md  storage-hook-research.md
server/: start_windrose_plus.bat  windrose_plus_server.ps1
server/lib/: Get-LayoutFingerprint.ps1
server/web/: index.html
tools/: WindrosePlus-BuildPak.ps1  generateTiles.ps1
tools/lib/: CurveTableParser.ps1  IniConfigParser.ps1  MultiplierPakBuilder.ps1
tools/windrose-heal/: Cargo.toml
tools/windrose-heal/src/: audit.rs  heal.rs  levels.rs  main.rs  player_db.rs  summary.rs  zip_repair.rs
(+916 files in other folders)
