[package]
name = "windrose-heal"
version = "0.1.0"
edition = "2021"
description = "Surgical repair tool for Windrose client character saves (drifted points_per_level state)"

[dependencies]
bson = "2.13"
rocksdb = { version = "0.22", default-features = false, features = ["snappy", "lz4", "zstd"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
